assets/_noora/css/tooltip.css
.noora-tooltip {
  & [data-part="content"] {
    align-items: top;
    background: var(--noora-surface-background-primary);
    border-radius: var(--noora-radius-medium);
    box-shadow: var(--noora-border-heavy);
    color: var(--noora-surface-label-primary);
    max-width: 250px;
    position: absolute;
    width: max-content;

    & [data-part="icon"] {
      display: inline-flex;
      flex-shrink: 0;
      height: var(--noora-icon-size-medium);
      width: var(--noora-icon-size-medium);

      & svg {
        height: 100%;
        width: 100%;
      }
    }

    & [data-part="body"] {
      display: flex;
      flex-direction: column;
    }

    & [data-part="title"] {
      font: var(--noora-font-weight-medium) var(--noora-font-body-small);
    }

    & [data-part="description"] {
      color: var(--noora-surface-label-secondary);
      font: var(--noora-font-body-xsmall);
    }

    &[data-state="open"] {
      display: flex;
    }

    &[data-size="small"] {
      font: var(--noora-font-body-small);
      gap: var(--noora-spacing-2);
      padding: var(--noora-spacing-2) var(--noora-spacing-3);
    }

    &[data-size="large"] {
      gap: var(--noora-spacing-4);
      padding: var(--noora-spacing-5);
    }
  }
}

